Button and white space issues fixed. Moving to single page ordering shortly.

--- a/Front end app/resturantmockup.css
+++ b/Front end app/resturantmockup.css
@@ -2,9 +2,7 @@ body {
 color: white;
 font-family: "Roboto Condensed";
 text-align: center;
-width: 320px;
-height: 480px;
-border: 10px solid black;
+box-sizing: border-box;
 }
 .logo {
 height: 125px;
@@ -15,10 +13,12 @@ background-color:white;
 background-color: navy;
 width: 320px;
 height: 480px;
+padding-top: 10px;
+border: 10px solid black;
+
 }
 .button {
 	margin-bottom:15px;
-	margin-top:10px
 }
 h2 {
 	text-align:center;
